# WSIaaS

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  mermaid.mms  pyproject.toml  requirements.txt  type_hints.py
database/: databases.py  db_factory.py
features/: extraction.feature  load.feature  transformation.feature
loader/: loader_handler.py  loader_writers.py
scraper/: extraction_handler.py  logging_config.py
scraper/strategies/bigcommerce/: sitemap_single_product_strategy.py
scraper/strategies/shopify/: api_strategy.py  sitemap_single_product_strategy.py
scraper/strategies/wix/: sitemap_single_product_strategy.py
scraper/strategies/woocommerce/: sitemap_single_product_strategy.py
transformer/: transformer_handler.py
transformer/input_mappers_pydantic/: bigcommerce.py  prestashop.py  shopify.py  wix.py  woocommerce.py
